[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/info_layer_background.png" type="Texture2D" id=1]
[ext_resource path="res://src/PlayerCountSelectScene.gd" type="Script" id=2]

[sub_resource type="TileSet" id=1]
0/name = "info_layer_background.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="PlayerCountSelectScene" type="Node2D"]
script = ExtResource( 2 )

[node name="TextBackground" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PackedInt32Array( 917521, 0, 0, 917525, 0, 0, 917529, 0, 0, 917533, 0, 0, 917537, 0, 0, 917541, 0, 0, 917545, 0, 0, 1179665, 0, 0, 1179669, 0, 0, 1179673, 0, 0, 1179677, 0, 0, 1179681, 0, 0, 1179685, 0, 0, 1179689, 0, 0, 1441809, 0, 0, 1441813, 0, 0, 1441817, 0, 0, 1441821, 0, 0, 1441825, 0, 0, 1441829, 0, 0, 1441833, 0, 0, 1703953, 0, 0, 1703957, 0, 0, 1703961, 0, 0, 1703965, 0, 0, 1703969, 0, 0, 1703973, 0, 0, 1703977, 0, 0, 1835025, 0, 0, 1835029, 0, 0, 1835033, 0, 0, 1835037, 0, 0, 1835041, 0, 0, 1835045, 0, 0, 1835049, 0, 0 )

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 280.0
offset_top = 232.0
offset_right = 712.0
offset_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer"]
offset_right = 432.0
offset_bottom = 14.0
text = "How many players?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="GridContainer"]
offset_top = 18.0
offset_right = 432.0
offset_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
offset_top = 121.0
offset_right = 432.0
offset_bottom = 141.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/HBoxContainer"]
offset_right = 105.0
offset_bottom = 20.0
grow_horizontal = 2
pivot_offset = Vector2( -61.3758, 167.445 )
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="Button" parent="GridContainer/HBoxContainer/VBoxContainer"]
offset_right = 105.0
offset_bottom = 20.0
text = "1"

[node name="VBoxContainer2" type="VBoxContainer" parent="GridContainer/HBoxContainer"]
offset_left = 109.0
offset_right = 214.0
offset_bottom = 20.0
grow_horizontal = 2
pivot_offset = Vector2( -61.3758, 167.445 )
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="Button" parent="GridContainer/HBoxContainer/VBoxContainer2"]
offset_right = 105.0
offset_bottom = 20.0
text = "2"

[node name="VBoxContainer3" type="VBoxContainer" parent="GridContainer/HBoxContainer"]
offset_left = 218.0
offset_right = 323.0
offset_bottom = 20.0
pivot_offset = Vector2( -61.3758, 167.445 )
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="Button" parent="GridContainer/HBoxContainer/VBoxContainer3"]
offset_right = 105.0
offset_bottom = 20.0
text = "3"

[node name="VBoxContainer4" type="VBoxContainer" parent="GridContainer/HBoxContainer"]
offset_left = 327.0
offset_right = 432.0
offset_bottom = 20.0
pivot_offset = Vector2( -61.3758, 167.445 )
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GridContainer/HBoxContainer/VBoxContainer4"]
offset_right = 105.0
offset_bottom = 20.0
text = "4"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="GridContainer"]
offset_top = 145.0
offset_right = 432.0
offset_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
offset_top = 248.0
offset_right = 432.0
offset_bottom = 272.0
size_flags_vertical = 0
alignment = 1

[node name="LoadGame" type="Button" parent="GridContainer/HBoxContainer2"]
offset_right = 84.0
offset_bottom = 24.0
disabled = true
text = "Load Game"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="GridContainer/HBoxContainer2"]
offset_left = 88.0
offset_right = 307.0
offset_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckBox" type="CheckBox" parent="GridContainer/HBoxContainer2"]
offset_left = 311.0
offset_right = 432.0
offset_bottom = 24.0
text = "Play against AI"
align = 2

[connection signal="pressed" from="GridContainer/HBoxContainer/VBoxContainer/Button" to="." method="select_one_player"]
[connection signal="pressed" from="GridContainer/HBoxContainer/VBoxContainer2/Button" to="." method="select_two_players"]
[connection signal="pressed" from="GridContainer/HBoxContainer/VBoxContainer3/Button" to="." method="select_three_players"]
[connection signal="pressed" from="GridContainer/HBoxContainer/VBoxContainer4/Button" to="." method="select_four_players"]
